Front update theme, buttons...

--- a/image/image.html
+++ b/image/image.html
@@ -12,13 +12,13 @@
 <body>
 <nav class="nav_bar">
 	<button onclick="window.location.href='../frise/frise.html'">
-		<img src="../img/left-arrow.png" height="100px" width="100px">
+		<img src="../img/left-arrow.png" id="left-arrow">
 	</button>
 	<button onclick="window.location.href='../menu/homepage.html'">
-		<img src="../img/home.png" height="50px" width="50px" >
+		<img src="../img/home.png" id="home-img" >
 	</button>
 	<button onclick="window.location.href='../vf/vf.html'">
-		<img src="../img/right-arrow.png" height="100px" width="100px">
+		<img src="../img/right-arrow.png" id="right-arrow">
 	</button>
 </nav>
 
