--- a/encheres/encheres.html
+++ b/encheres/encheres.html
@@ -15,13 +15,13 @@
 	<script src="encheres.js"></script>
 <nav class="nav_bar">
 	<button onclick="window.location.href='../menu/homepage.html'">
-		<img src="../img/left-arrow.png" height="100px" width="100px">
+		<img src="../img/left-arrow.png" id="left-arrow">
 	</button>
 	<button onclick="window.location.href='../menu/homepage.html'">
-		<img src="../img/home.png" height="50px" width="50px" >
+		<img src="../img/home.png" id="home-img" >
 	</button>
 	<button onclick="window.location.href='../jeu_annees/jeu_annees.html'">
-		<img src="../img/right-arrow.png" height="100px" width="100px">
+		<img src="../img/right-arrow.png" id="right-arrow">
 	</button>
 </nav>
 
