[Wikipedia] add title + pages

--- a/encheres/encheres.html
+++ b/encheres/encheres.html
@@ -37,7 +37,7 @@
 		<div class="blocrouge">
 			<input type="text" name="proposition" id="prop">
 			<label for="prop"> Mot à ajouter </label>	
-			<div id="resumes"></div>
+			<div id="pages"></div>
 		</div>
 	<div class="end" id="end"></div>
 </div>
