--- a/frise/frise.html
+++ b/frise/frise.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Les avis !!!</title>
+  <title>Triage</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../menu/nav_bar.css">
   <link rel="stylesheet" href="../menu/homepage.css">
@@ -23,11 +23,8 @@
 	</button>
 </nav>
 
-<p class="regles"> Les règles : </p>
-<p class="enonce_regles">Pour chaque avis il faut deviner le mot qui manque</p>
 
-
-<p class="nom_equipe">Les petits mouchoirs - ★★★★ ou ★★★★★</p>
+<p class="nom_equipe">Trier du plus récent (1) au plus ancien (5) maire de Pampelune - on parle ici du premier mandat de chaque maire</p>
 <div class="limiter">
 		<div class="container-table100">
 			<div class="wrap-table100">
@@ -35,13 +32,13 @@
 
 						<div class="row header">
 							<div class="cell" id="perso">
-								Avis
+								Alcalde
 							</div>
 							<div class="cell" id="ordre">
-								Mot manquant ?
+								Repuesta
 							</div>
 							<div class="cell" id="age">
-								Mot manquant
+								Solución
 							</div>
 						</div>
 
@@ -114,7 +111,7 @@
 	</div>
 	<input type="button" class="bouton" id="bouton1" value="Valider" onclick="Valider1()"></button>
 
-<p class="nom_equipe">Nous finirons ensemble - ★★★★ </p>
+<p class="nom_equipe">Trier de la ville la moins peuplée (1) à la plus peuplée (5) - Données de 2011</p>
 <div class="limiter">
 		<div class="container-table100">
 			<div class="wrap-table100">
@@ -122,13 +119,13 @@
 
 						<div class="row header">
 							<div class="cell" id="perso">
-								Avis
+								Ville
 							</div>
 							<div class="cell" id="ordre">
-								Mot manquant
+								Réponse
 							</div>
 							<div class="cell" id="age">
-								Mot manquant ?
+								Solution
 							</div>
 						</div>
 
@@ -202,7 +199,7 @@
 	<input type="button" class="bouton" id="bouton2" value="Valider" onclick="Valider2()"></button>
 
 
-<p class="nom_equipe">Les petits mouchoirs - ★ ou ★★</p>
+<p class="nom_equipe">Trier de l'endroit le plus près (1) à l'endroit le plus loin (5) à vol d'oiseau de la mairie de Pampelune</p>
 <div class="limiter">
 		<div class="container-table100">
 			<div class="wrap-table100">
@@ -210,13 +207,13 @@
 
 						<div class="row header">
 							<div class="cell" id="perso">
-								Avis
+								Lieu
 							</div>
 							<div class="cell" id="ordre">
-								Mot manquant ?
+								Réponse
 							</div>
 							<div class="cell" id="age">
-								Mot manquant
+								Solution
 							</div>
 						</div>
 
@@ -290,7 +287,7 @@
 	<input type="button" class="bouton" id="bouton3" value="Valider" onclick="Valider3()"></button>
 
 
-<p class="nom_equipe">Nous finirons ensemble - ★</p>
+<p class="nom_equipe">Trier le premier titre de champion de la ligue nationale de ces clubs du plus ancien (1) au plus récent (5)</p>
 <div class="limiter">
 		<div class="container-table100">
 			<div class="wrap-table100">
@@ -298,13 +295,13 @@
 
 						<div class="row header">
 							<div class="cell" id="perso">
-								Avis
+								Club
 							</div>
 							<div class="cell" id="ordre">
-								Mot manquant ?
+								Réponse
 							</div>
 							<div class="cell" id="age">
-								Mot manquant
+								Solution
 							</div>
 						</div>
 
@@ -379,7 +376,6 @@
 
 
 
-<div class="marge_inf"></div>
 </body>
 	<script src="frise.js"></script>
 </html>
