--- a/vf/vf.html
+++ b/vf/vf.html
@@ -21,9 +21,8 @@
 			<img src="../img/right-arrow.png" id="right-arrow">
 		</button>
 	</nav>
-<p class="regles"> Les règles : </p>
 <p class="enonce_regles">Pour chaque phrase, tu dois dire si l'affirmation est vraie ou fausse.</p>
-<h1 class="nomjoueur">Les petits mouchoirs</h1>
+<h1 class="nomjoueur">Liga 2023-2024</h1>
 	<div class="ligne">
 		<div class="carre">
 			<div class="question" id="question0"></div>
@@ -51,6 +50,7 @@
 		</div>
 	</div>	
 
+	<h1 class="nomjoueur">Euroligue 2023-2024</h1>
 	<div class="ligne">
 		
 		<div class="carre">
@@ -80,7 +80,7 @@
 		
 		</div>
 	</div>	
-	<h1 class="nomjoueur">Nous finirons ensemble</h1>
+	<h1 class="nomjoueur">Coupe du monde de basket 2019</h1>
 	<div class="ligne">
 		<div class="carre">
 			<div class="question" id="question8"></div>
@@ -109,6 +109,7 @@
 		</div>
 	</div>	
 	
+	<h1 class="nomjoueur">Saison NBA 2022-2023</h1>
 	<div class="ligne">
 		<div class="carre">
 			<div class="question" id="question12"></div>
@@ -138,7 +139,7 @@
 	</div>
 
 
-<div class="marge_inf"></div>
+
 </body>
 	<script src="vf.js"></script>
 </html>
