[Intrus] refacto front

--- a/intrus/intrus.html
+++ b/intrus/intrus.html
@@ -30,45 +30,25 @@
 </div>
 
 <div class="tbl-header">
-	<table >
-		<thead>
-			<th id="nom_manche" class="colo"></th>
-		</thead>
-	</table>
+	<p id="nom_manche" class="colo"></p>
 
-	<div class="tbl-content">
-		<table >
-			<tbody>
-				<tr>
-					<td id="0" class="colo" onclick="correct(this.id)"></td>
-				</tr>
-				<tr>
-					<td id="1" class="colo" onclick="correct(this.id)"></td>
-				</tr>
-				<tr>
-					<td id="2" class="colo" onclick="correct(this.id)"></td>
-				</tr>
-				<tr>
-					<td id="3" class="colo" onclick="correct(this.id)"></td>
-				</tr>
-				<tr>
-					<td id="4" class="colo" onclick="correct(this.id)"></td>
-				</tr>
-				<tr>
-					<td id="5" class="colo" onclick="correct(this.id)"></td>
-				</tr>
-				<tr>
-					<td id="6" class="colo" onclick="correct(this.id)"></td>
-				</tr>
-				<tr>
-					<td id="7" class="colo" onclick="correct(this.id)"></td>
-				</tr>
-			</tbody>
-		</table>
-		
+	<div id="answers" class="tbl-content invisible">
+		<table>
+			<tr>
+			  <td id="0" class="colo" onclick="correct(this.id)"></td>
+			  <td id="1" class="colo" onclick="correct(this.id)"></td>
+			  <td id="2" class="colo" onclick="correct(this.id)"></td>
+			  <td id="3" class="colo" onclick="correct(this.id)"></td>
+			</tr>
+			<tr>
+			  <td id="4" class="colo" onclick="correct(this.id)"></td>
+			  <td id="5" class="colo" onclick="correct(this.id)"></td>
+			  <td id="6" class="colo" onclick="correct(this.id)"></td>
+			  <td id="7" class="colo" onclick="correct(this.id)"></td>
+			</tr>
+		  </table>		  
 	</div>
 </div>
-	<div class="marge_inf"></div>
 
 </body>
 	<script src="intrus.js"></script>
