Création du jeu des fonctions !

--- a/encheres/encheres.html
+++ b/encheres/encheres.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Enumération</title>
+  <title>Wikipédia</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../menu/nav_bar.css">
   <link rel="stylesheet" href="encheres.css">
