--- a/jeu_annees/jeu_annees.html
+++ b/jeu_annees/jeu_annees.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Qui est qui ?</title>
+  <title>FRAMED</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="jeu_annees.css">
   <link rel="stylesheet" href="../menu/homepage.css">
