--- a/menu/homepage.html
+++ b/menu/homepage.html
@@ -12,7 +12,6 @@
 <body>
   
   <div class="centerBox">
-    
     <div class="jeu">
       <h1>Jeu 1</h1>
       <button onclick="window.location.href='../encheres/encheres.html'">
@@ -31,8 +30,8 @@
       <button onclick="window.location.href='../jeu_annees/jeu_annees.html'">
         <span>
           <span>
-            <span data-attr-span="Qui est qui  ?">
-              Qui est qui ?
+            <span data-attr-span="Framed">
+              Framed
             </span>
           </span>
         </span>
@@ -45,8 +44,8 @@
       <button onclick="window.location.href='../questions_indiv/questions_indiv.html'">
         <span>
           <span>
-            <span data-attr-span="Questions à thèmes">
-                Questions à thèmes
+            <span data-attr-span="Question avec JOKER">
+                Questions avec JOKER
             </span>
           </span>
         </span>
@@ -76,8 +75,8 @@
       <button onclick="window.location.href='../frise/frise.html'">
         <span>
           <span>
-            <span data-attr-span="Qu'en pensent les autres ?">
-              Qu'en pensent les autres ?
+            <span data-attr-span="A toi de trier !">
+              A toi de trier !
             </span>
           </span>
         </span>
@@ -90,8 +89,8 @@
       <button onclick="window.location.href='../image/image.html'">
         <span>
           <span>
-            <span data-attr-span="Qui est en présent ?">
-              Qui est en présent ?
+            <span data-attr-span="Photos à replacer">
+              Photos à replacer
             </span>
           </span>
         </span>
@@ -121,8 +120,8 @@
       <button onclick="window.location.href='../poemes/poemes.html'">
         <span>
           <span>
-            <span data-attr-span="Qui dit quoi ?">
-              Qui dit quoi ?
+            <span data-attr-span="A replacer">
+              A replacer
             </span>
           </span>
         </span>
@@ -134,8 +133,8 @@
       <button onclick="window.location.href='../avant-apres/avant-apres.html'">
         <span>
           <span>
-            <span data-attr-span="Qui va se tromper ?">
-              Qui va se tromper ?
+            <span data-attr-span="1 Jour 1 Film">
+              1 Jour 1 Film
             </span>
           </span>
         </span>
@@ -178,8 +177,8 @@
       <button onclick="window.location.href='../deviner/deviner.html'">
         <span>
           <span>
-            <span data-attr-span="Qui est-ce ?">
-              Qui est-ce ?
+            <span data-attr-span="Quel drapeau ?">
+              Quel drapeau ?
             </span>
           </span>
         </span>
@@ -188,5 +187,4 @@
 
 </div>   
 </body>
-<script src="menu.js"></script>
 </html>
