--- a/questions_indiv/questions_indiv.html
+++ b/questions_indiv/questions_indiv.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Chacun sa spécialité</title>
+	<title>Joker ?</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="questions_indiv.css">
 	<link rel="stylesheet" href="../menu/homepage.css">
