menu into index.html to host on github

--- a/avant-apres/avant-apres.html
+++ b/avant-apres/avant-apres.html
@@ -5,17 +5,17 @@
   <title>1 jour 1 film</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="avant-apres.css">
-  <link rel="stylesheet" href="../menu/homepage.css">
-  <link rel="stylesheet" href="../menu/nav_bar.css">
+  <link rel="stylesheet" href="../homepage.css">
+  <link rel="stylesheet" href="../nav_bar.css">
 
 </head>
 
 <body>
 <nav class="nav_bar">
-	<button onclick="window.location.href='../menu/homepage.html'">
+	<button onclick="window.location.href='../index.html'">
 		<img src="../img/left-arrow.png" id="left-arrow">
 	</button>
-	<button onclick="window.location.href='../menu/homepage.html'">
+	<button onclick="window.location.href='../index.html'">
 		<img src="../img/home.png" id="home-img" >
 	</button>
 	<button onclick="window.location.href='../dcc/dcc.html'">
