--- a/dcc/dcc.html
+++ b/dcc/dcc.html
@@ -4,8 +4,8 @@
 <head>
   <title>Duo Carré ou Cash</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../menu/nav_bar.css">
-  <link rel="stylesheet" href="../menu/homepage.css">
+  <link rel="stylesheet" href="../nav_bar.css">
+  <link rel="stylesheet" href="../homepage.css">
   <link rel="stylesheet" href="dcc.css">
 </head>
 
@@ -14,7 +14,7 @@
 	<button onclick="window.location.href='../avant-apres/avant-apres.html'">
 		<img src="../img/left-arrow.png" id="left-arrow">
 	</button>
-	<button onclick="window.location.href='../menu/homepage.html'">
+	<button onclick="window.location.href='../index.html'">
 		<img src="../img/home.png" id="home-img" >
 	</button>
 	<button onclick="window.location.href='../questions_a_theme/questions_a_theme.html'">
