--- a/encheres/encheres.html
+++ b/encheres/encheres.html
@@ -4,19 +4,19 @@
 <head>
   <title>Wikipédia</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../menu/nav_bar.css">
+  <link rel="stylesheet" href="../nav_bar.css">
   <link rel="stylesheet" href="encheres.css">
-  <link rel="stylesheet" href="../menu/homepage.css">
+  <link rel="stylesheet" href="../homepage.css">
 
 
 </head>
 
 <body>
 <nav class="nav_bar">
-	<button onclick="window.location.href='../menu/homepage.html'">
+	<button onclick="window.location.href='../index.html'">
 		<img src="../img/left-arrow.png" id="left-arrow">
 	</button>
-	<button onclick="window.location.href='../menu/homepage.html'">
+	<button onclick="window.location.href='../index.html'">
 		<img src="../img/home.png" id="home-img" >
 	</button>
 	<button onclick="window.location.href='../jeu_annees/jeu_annees.html'">
