--- a/poemes/poemes.html
+++ b/poemes/poemes.html
@@ -4,8 +4,8 @@
 <head>
   <title>Connais-tu ces fonctions ?</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../menu/nav_bar.css">
-  <link rel="stylesheet" href="../menu/homepage.css">
+  <link rel="stylesheet" href="../nav_bar.css">
+  <link rel="stylesheet" href="../homepage.css">
 <link rel="stylesheet" href="poemes.css">
 
 </head>
@@ -15,7 +15,7 @@
 		<button onclick="window.location.href='../vf/vf.html'">
 			<img class="image" src="../img/left-arrow.png" id="left-arrow">
 		</button>
-		<button onclick="window.location.href='../menu/homepage.html'">
+		<button onclick="window.location.href='../index.html'">
 			<img class="image" src="../img/home.png" id="home-img" >
 		</button>
 		<button onclick="window.location.href='../avant-apres/avant-apres.html'">
