--- a/test/menu.html
+++ b/test/menu.html
@@ -152,7 +152,7 @@
 
     <div class="jeu">
       <h1>Jeu 10</h1>
-      <button onclick="window.location.href='..//dcc/dcc.html'">
+      <button onclick="window.location.href='../dcc/dcc.html'">
         <span>
           <span>
             <span data-attr-span="Duo, Carré ou Cash ?">
