--- a/deviner/deviner.html
+++ b/deviner/deviner.html
@@ -4,8 +4,8 @@
 <head>
   <title>Quel drapeau ?</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../menu/nav_bar.css">
-  <link rel="stylesheet" href="../menu/homepage.css">
+  <link rel="stylesheet" href="../nav_bar.css">
+  <link rel="stylesheet" href="../homepage.css">
   <link rel="stylesheet" href="deviner.css">
 </head>
 
@@ -14,10 +14,10 @@
 	<button onclick="window.location.href='../questions_a_theme/questions_a_theme.html'">
 		<img src="../img/left-arrow.png" id="left-arrow">
 	</button>
-	<button onclick="window.location.href='../menu/homepage.html'">
+	<button onclick="window.location.href='../index.html'">
 		<img src="../img/home.png" id="home-img" >
 	</button>
-	<button onclick="window.location.href='../menu/homepage.html'">
+	<button onclick="window.location.href='../index.html'">
 		<img src="../img/right-arrow.png" id="right-arrow">
 	</button>
 </nav>
