--- a/jeu_annees/jeu_annees.html
+++ b/jeu_annees/jeu_annees.html
@@ -5,8 +5,8 @@
   <title>FRAMED</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="jeu_annees.css">
-  <link rel="stylesheet" href="../menu/homepage.css">
-  <link rel="stylesheet" href="../menu/nav_bar.css">
+  <link rel="stylesheet" href="../homepage.css">
+  <link rel="stylesheet" href="../nav_bar.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 	<button onclick="window.location.href='../encheres/encheres.html'">
 		<img src="../img/left-arrow.png" id="left-arrow">
 	</button>
-	<button onclick="window.location.href='../menu/homepage.html'">
+	<button onclick="window.location.href='../index.html'">
 		<img src="../img/home.png" id="home-img" >
 	</button>
 	<button onclick="window.location.href='../questions_indiv/questions_indiv.html'">
