Change curve layout

--- a/OPARI/poemes/poemes.html
+++ b/OPARI/poemes/poemes.html
@@ -29,121 +29,12 @@
 </script>
 
 <div class="questions">
-	
-<table>
 
-	  <tbody>
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag0"	draggable="true" ondragstart="dragStart(event)">
-			</td>
+	<div id="curves">
+	</div>
 
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop0">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag1"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop1">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag2"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop2">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag3"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop3">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag4"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop4">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag5"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop5">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag6"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop6">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag7"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop7">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag8"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop8">
-
-			</th>
-		</tr>
-
-		<tr>
-			
-			<td class="divfirst" ondrop="dragDrop(event)" ondragover="allowDrop(event)">
-				<img class="image" id="drag9"	draggable="true" ondragstart="dragStart(event)">
-			</td>
-
-			<th ondrop="dragDrop(event)" ondragover="allowDrop(event)"scope="row" id="prop9">
-
-			</th>
-		</tr>
-	  </tbody>
-</table>
+	<div id="functions">
+	</div>
 
 	<div class ="contenu_reponse">
 		<button class="btn bouton_reponse" id="afficher_rep" value="Afficher la réponse" onclick="resultat_final()">
