Dernières questions pour les questions à thème et DCC

--- a/OPARI/questions_a_theme/questions_a_theme.html
+++ b/OPARI/questions_a_theme/questions_a_theme.html
@@ -25,19 +25,19 @@
 <p class="regles"> Les règles : </p>
 <div class="joueurs">
 	<button class="btn joueur" id="papa">
-		<span>Thème 1</span>
+		<span>Compositions</span>
 	</button>
 	<button class="btn joueur" id="maman">
-		<span>Thème 2</span>
+		<span>Nom de films</span>
 	</button>
 	<button class="btn joueur" id="sam">
-		<span>Thème 3</span>
+		<span>Escudos</span>
 	</button>
 	<button class="btn joueur" id="aitor">
-		<span>Thème 4</span>
+		<span>Provincias</span>
 	</button>
 	<button class="btn joueur" id="zaz">
-		<span>Thème 5</span>
+		<span>Cocina vasca</span>
 	</button>
 
 </div>
